# nightwatch

./: README.md  pyproject.toml
data/: download.sh
nightwatch/: tools.py  train_seq.py
nightwatch/data/: common.py  datasets.py  features.py  readers.py  sleep_accel.py
nightwatch/models/: seq_cls.py
notebooks/: eda_sleepaccel.ipynb
