[tool.poetry]
name = "nightwatch"
version = "0.1.0"
description = ""
authors = ["Radu Chindris <radu.chindris@gmail.com>"]
readme = "README.md"
packages = [{include = "nightwatch"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
torch = "^2.3.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scipy = "^1.13.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
